--- a/code/esp/files/config.html
+++ b/code/esp/files/config.html
@@ -1,27 +1,25 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <title>TyTherm configuration</title>
-
+    <title>SwakeUpp Configuration</title>
     <!-- Bootstrap core -->
-	<link href="clockpicker.css" rel="stylesheet">
-	<link href="bootstrap-clockpicker.css" rel="stylesheet">
+    <link href="clockpicker.css" rel="stylesheet">
+    <link href="bootstrap-clockpicker.css" rel="stylesheet">
     <link href="bootstrap.min.css" rel="stylesheet">
-	<script src="jquery-2.1.4.min.js"></script>
-	<script src="clockpicker.js"</script>
-	<script src="bootstrap-clockpicker.js</script>
-	<style>
-		.main { font-size: 63px; }
-	</style>
-
+    <script src="jquery-2.1.4.min.js"></script>
+    <script src="clockpicker.js"</script>
+    <script src="bootstrap-clockpicker.js</script>
+      <style>
+      .main { font-size: 63px; }
+      </style>
   </head>
-<script src="config.js"></script>
+  <script src="config.js"></script>
   <body>
-
     <div class="container">
       <div class="header">
         <nav>
@@ -30,84 +28,113 @@
             <li role="presentation" class="active"><a href="/config">Configuration</a></li>
           </ul>
         </nav>
-        <h3 class="text-muted">TyTherm</h3>
+        <h3 class="text-muted">SwakeUpp</h3>
       </div>
-	  
-	  <div class="row">
-		<h2>&nbsp;</h2>
-		<div class="col-xs-offset-2 col-xs-8">
-			<!-- Network config -->
-			<div>
-			<div class="panel panel-default">
-				<div class="panel-heading">
-					<h3 class="panel-title">Settings</h3>
-				</div>
-				<div class="panel-body">
-					<form id="form_citycfg" method="POST">
-					  <div class="form-group">
-						<label for="StaCITY">City</label>
-						<input type="text" id="StaCITY" name="StaCITY" class="form-control" placeholder="Enter City" value="{StaCITY}">
-					  </div>
-					  <div class="btn-group" data-toggle="buttons">
-						  <label class="btn btn-primary active">
-							<input type="radio" name="options" id="option1" autocomplete="off" checked> Celsius
-						  </label>
-						  <label class="btn btn-primary">
-							<input type="radio" name="options" id="option2" autocomplete="off"> Fahrenheit
-						  </label>
-						  <label class="btn btn-primary">
-							<input type="radio" name="options" id="option3" autocomplete="off"> Kelvin
-						  </label>
-						</div>
-					  <button type="submit" class="btn pull-right btn-success">Submit</button>
-					</form>
-				</div>
-			  </div>
-			  <div class="panel panel-default">
-				<div class="panel-heading">
-				  <h3 class="panel-title">Network</h3>
-				</div>
-				<div class="panel-body">
-				  <form id="form_netcfg" method="POST">
-					  <div class="form-group">
-						<label for="StaSSID">Name</label>
-						<input type="text" id="StaSSID" name="StaSSID" class="form-control" placeholder="Enter SSID" value="{StaSSID}">
-					  </div>
-					  <div class="form-group">
-						<label for="Password">Password</label>
-						<input type="password" id="StaPassword" name="StaPassword" class="form-control" placeholder="Password">
-					  </div> 
-					  <div class="form-group"> 
-						<label for="StaEnable">Enable WIFI Client</label>
-						<input type="checkbox" id="StaEnable" name="StaEnable" class="form-horizontal pull-right"> 
-					  </div> 
-					  <button type="submit" class="btn btn-success">Save network</button>
-					  <button type="button" id="netcfg_cancel" class="btn btn-link">Cancel</button>
-					</form>
-				</div>
-			  </div>
-			</div>
-			
-			<div class="panel panel-default">
-				<div class="panel-heading">
-				  <h3 class="panel-title">Alarms</h3>
-				</div>
-				<div class="panel-body">
-					<div class="input-group clockpicker">
-						<input type="text" class="form-control" value="09:30"> 
+      <div class="row">
+        <h2>&nbsp;</h2> 
+		          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h3 class="panel-title">Alarms</h3>
+            </div>
+            <div class="panel-body">
+              <form class="form" id="form_addalarm" method="POST"> 
+                <div class="input-group clockpicker" data-align="top" data-autoclose="true">
+					<input type="text" id="alarm_time" name="alarm_time" class="form-control" placeholder="00:00" value="00:00">
+					<span class="input-group-addon">
+						<span class="glyphicon glyphicon-time"></span>
 					</span>
 				</div>
-				</div>
-			  </div>
+				<div>&nbsp;</div>
+                <div class="btn-group btn-group-justified" data-toggle="buttons">
+                  <label class="btn btn-primary btn-sm">
+                  <input type="checkbox" name="options" id="option1" autocomplete="off"> Mon
+                  </label>
+                  <label class="btn btn-primary btn-sm">
+                  <input type="checkbox" name="options" id="option2" autocomplete="off"> Tue
+                  </label>
+                  <label class="btn btn-primary btn-sm">
+                  <input type="checkbox" name="options" id="option3" autocomplete="off"> Wed
+                  </label>
+				  <label class="btn btn-primary btn-sm">
+                  <input type="checkbox" name="options" id="option3" autocomplete="off"> Thu
+                  </label>
+				  <label class="btn btn-primary btn-sm">
+                  <input type="checkbox" name="options" id="option3" autocomplete="off"> Fri
+                  </label>
+				  <label class="btn btn-primary btn-sm">
+                  <input type="checkbox" name="options" id="option3" autocomplete="off"> Sat
+                  </label>
+				  <label class="btn btn-primary btn-sm">
+                  <input type="checkbox" name="options" id="option3" autocomplete="off"> Sun
+                  </label>
+                </div> 
+				<div>&nbsp;</div>
+                <button type="submit" class="btn btn-success btn-block">Set</button>
+              </form>
 			</div>
+          </div>
+		
+          <!-- Network config -->
+          <div>
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h3 class="panel-title">Settings</h3>
+              </div>
+              <div class="panel-body">
+                <form id="form_citycfg" method="POST">
+                  <div class="form-group">
+                    <label for="StaCITY">City</label>
+                    <input type="text" id="StaCITY" name="StaCITY" class="form-control" placeholder="Enter City" value="{StaCITY}">
+                  </div>
+                  <div class="btn-group btn-group-justified" data-toggle="buttons">
+                    <label class="btn btn-primary">
+                    <input type="radio" name="options" id="option1" autocomplete="off"> Celsius
+                    </label>
+                    <label class="btn btn-primary">
+                    <input type="radio" name="options" id="option2" autocomplete="off"> Fahrenheit
+                    </label>
+                    <label class="btn btn-primary">
+                    <input type="radio" name="options" id="option3" autocomplete="off"> Kelvin
+                    </label>
+                  </div>
+				  <div>&nbsp;</div>
+                  <button type="submit" class="btn btn-success  btn-block">Submit</button>
+                </form>
+              </div>
+            </div>
 			
-			<!-- TyTherm adjustment config -->
-			
-		</div> <!-- /col -->
-	</div> <!-- /row -->
-
-<script type="text/javascript">
-$('.clockpicker').clockpicker();
-</script>
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h3 class="panel-title">Network</h3>
+              </div>
+              <div class="panel-body">
+                <form id="form_netcfg" method="POST">
+                  <div class="form-group">
+                    <label for="StaSSID">Name</label>
+                    <input type="text" id="StaSSID" name="StaSSID" class="form-control" placeholder="Enter SSID" value="{StaSSID}">
+                  </div>
+                  <div class="form-group">
+                    <label for="Password">Password</label>
+                    <input type="password" id="StaPassword" name="StaPassword" class="form-control" placeholder="Password">
+                  </div>
+                  <div class="form-group"> 
+                    <label for="StaEnable">Enable WIFI Client</label>
+                    <input type="checkbox" id="StaEnable" name="StaEnable" class="form-horizontal pull-right"> 
+                  </div>
+                  <button type="submit" class="btn btn-success btn-block">Save network</button> 
+                </form>
+              </div>
+            </div>
+          </div>
+		  
+        </div>
+      <!-- TyTherm adjustment config -->
+      </div>
+    <!-- /col -->
+    </div> <!-- /row -->
+    <script type="text/javascript">
+      $('.clockpicker').clockpicker();
+    </script>
   </body>
 </html>
+
