--- a/code/esp/files/index.html
+++ b/code/esp/files/index.html
@@ -41,7 +41,7 @@
 	  	  </div>
 	  	  <div class="panel-body"> 
 		  
-			<div class="col-md-4">
+			<div class="col-md-3">
 			  <div class="panel panel-default">
 			    <div class="panel-heading">
 			  	<h3 class="panel-title">City</h3>
@@ -52,7 +52,7 @@
 			  </div>
 			</div>
 			
-			<div class="col-md-4">
+			<div class="col-md-3">
 			  <div class="panel panel-default">
 			    <div class="panel-heading">
 			  	<h3 class="panel-title">Weather</h3>
@@ -63,13 +63,24 @@
 			  </div>
 			</div>
 			
-			<div class="col-md-4">
+			<div class="col-md-3">
 			  <div class="panel panel-default">
 			    <div class="panel-heading">
 			  	<h3 class="panel-title">Time</h3>
 			    </div>
 			    <div class="panel-body">
-			  	<div id="time">{time}</div>
+			  	<div id="time">17:40</div>
+			    </div>
+			  </div>
+			</div>
+			
+			<div class="col-md-3">
+			  <div class="panel panel-default">
+			    <div class="panel-heading">
+			  	<h3 class="panel-title">Date</h3>
+			    </div>
+			    <div class="panel-body">
+			  	<div id="time">01/06/2017</div>
 			    </div>
 			  </div>
 			</div>
